@@ -1,5 +1,5 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin widget_calendar n 1.00]
+[manpage_begin widget_calendar n 1.0.1]
 [moddesc   {Various megawidgets}]
 [titledesc {Calendar Megawidget}]
 [category Widget]
@@ -7,7 +7,7 @@
 [require Tcl 8.4]
 [require Tk 8.4]
 [require widget [opt 3.0]]
-[require widget::calendar [opt 1.00]]
+[require widget::calendar [opt 1.0.1]]
 [description]
 
 This package provides a calendar megawidget (snidget).
