@@ -1,5 +1,5 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin widget_dateentry n 0.95]
+[manpage_begin widget_dateentry n 0.96]
 [moddesc   {Various megawidgets}]
 [titledesc {Date Entry Megawidget}]
 [category Widget]
@@ -7,7 +7,7 @@
 [require Tcl 8.4]
 [require Tk 8.4]
 [require widget [opt 3.0]]
-[require widget::dateentry [opt 0.95]]
+[require widget::dateentry [opt 0.96]]
 [description]
 
 This package provides a dateentry megawidget (snidget).
